# spearmint

./: --output  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .postman.json  .pre-commit-config.yaml  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  DOCKER_HOT_RELOAD.md  DOCKER_RESTART_SCRIPTS_SUMMARY.md  LICENSE  LOCAL_DEVELOPMENT_QUICKSTART.md  LOCAL_SDK_DEVELOPMENT.md  README.md  SECURITY.md  docker-compose.yml  mx-agent.config.json  package-lock.json  package.json  spectral-output.txt  start_api.sh  worktree.toml
core-api/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
core-api/legacy_scripts/: add_capital_expense_classification.py  add_missing_columns.py  analyze_db_for_dupes.py  analyze_duplicates.py  analyze_excel_sept.py  analyze_expenses.py  apply_rules_directly.py  check_account_balances.py  check_all_capital_expenses.py  check_capital_classification.py  check_capital_totals.py  check_classification_datatype.py  check_classifications.py  check_current_tool_state.py  check_database_state.py  check_exact_total.py  check_import_history.py  check_income_calculation.py  check_institution_data.py  check_reinvestments.py  check_schema_and_excel.py  check_sum_calculation.py  check_transactions.py  check_transfers.py  check_with_tool_filters.py  clear_transactions.py  compare_totals.py  create_dividend_classification_rules.py  database_all_sept_expenses.csv  database_filtered_sept_expenses.csv  debug_expense_query.py  diagnose_columns.py  diagnose_import.py  excel_sept_expenses.csv  (+39 more)
(+1590 files in other folders)
